--- a/playbooks/bootstrap-server/0-main.yaml
+++ b/playbooks/bootstrap-server/0-main.yaml
@@ -5,7 +5,7 @@
   tasks:
 
   - include_tasks: 1-create-user.yaml
-  
   - include_tasks: 2-setup-omz.yaml
-
   - include_tasks: 3-enable-ufw.yaml
+  - include_tasks: 4-secure-ssh.yaml
+  - include_tasks: reboot-server.yaml
