--- a/playbooks/bootstrap-server/0-main.yaml
+++ b/playbooks/bootstrap-server/0-main.yaml
@@ -4,8 +4,9 @@
   become: true
   tasks:
 
-  - include_tasks: 1-create-user.yaml
-  - include_tasks: 2-setup-omz.yaml
-  - include_tasks: 3-enable-ufw.yaml
-  - include_tasks: 4-secure-ssh.yaml
-  - include_tasks: 5-server-reboot.yaml
+  - include_tasks: 1-create-hostname.yaml
+  - include_tasks: 2-create-user.yaml
+  - include_tasks: 3-setup-apps.yaml
+  - include_tasks: 4-enable-ufw.yaml
+  - include_tasks: 5-secure-ssh.yaml
+  - include_tasks: 6-server-reboot.yaml
