modified ansible.cfg to point to hosts.yml

--- a/hosts.yml
+++ b/hosts.yml
@@ -54,3 +54,11 @@ web6b:
   vars:
     ansible_user: morty
     ansible_private_key_file: ~/.ssh/ansible
+
+# test Ubuntu Server 24.04
+web7:
+  hosts:
+    192.168.8.234
+  vars:
+    ansible_user: morty
+    ansible_private_key_file: ~/.ssh/ansible
