--- a/playbooks/base-server/3-setup-apps.yml
+++ b/playbooks/base-server/3-setup-apps.yml
@@ -1,7 +1,6 @@
 ---
-
-    # Update and install the base software
-    - name: Update apt package cache
+    
+    - name: Installing base apps
       apt:
         update_cache: yes
         cache_valid_time: 3600
@@ -20,6 +19,15 @@
         autoremove: yes
         purge: yes
 
+    - name: Check what is using Port 53
+      shell:
+        cmd: "sudo lsof -i:53 | awk 'FNR==2 {print $1}'"
+      register: port53user
+    
+    - name: What is using Port 53
+      debug:
+        msg: Port 53 is being used by "{{ port53user.stdout }}"
+
     - name: "editing /etc/systemd/resolved.conf"
       lineinfile:
         path: /etc/systemd/resolved.conf
@@ -30,9 +38,11 @@
           line: 'DNS=1.1.1.1'
         - regexp: '^#DNSStubListener=yes'
           line: 'DNSStubListener=no'
+      when: port53user.stdout == port53systemd
     
     - name: "force removal of symbolic link of resolv.conf"
       command: sudo ln -sf /run/systemd/resolve/resolv.conf /etc/resolv.conf
+      when: port53user.stdout == port53systemd
 
     - name: change morty default shell to ZSH
       command: usermod -s /usr/bin/zsh morty
@@ -52,6 +62,7 @@
         update: "true"
         accept_hostkey: "true"
         version: "master"
+        force: "true"
     
     - name: "OMZ clone ZSH Auto Suggestions git repo"
       git:
