--- a/playbooks/base-server/0-main.yml
+++ b/playbooks/base-server/0-main.yml
@@ -3,8 +3,8 @@
 - hosts: all
   become: true
   vars:
-    port53systemd: "systemd-r"
-    jammy: "22.04"
+    port53systemd: systemd-r
+    jammy: 22.04
 
   tasks:
 
@@ -13,4 +13,4 @@
   - include_tasks: 3-setup-apps.yml
   - include_tasks: 4-enable-ufw.yml
   - include_tasks: 5-secure-ssh.yml
-  - include_tasks: 6-server-reboot.yml
+  #- include_tasks: 6-server-reboot.yml
