--- a/hosts.yml
+++ b/hosts.yml
@@ -47,3 +47,10 @@ web6:
   vars:
     ansible_user: test-user
     ansible_ssh_private_key_file: ~/.ssh/ansible
+
+web7:
+  hosts:
+    192.168.8.121
+  vars:
+    ansible_user: test-user
+    ansible_ssh_private_key_file: ~/.ssh/ansible
