--- a/playbooks/base-server/0-main.yml
+++ b/playbooks/base-server/0-main.yml
@@ -1,16 +1,23 @@
 ---
 
+### the base-server install starts from this play
+### just disable any tasks below by commenting out the -include_task line with #
 - hosts: all
   become: true
   vars:
+    desired_hostname: mondskiez-test
+    tz: Asia/Manila
+    user_name: morty
+    user_home: /home/morty
+    user_pword: $6$RWo0laTgZpiSlKES$X6adutPj3ZjVNubU3Ehg.E2B/DtEgd/ni7FGaa4XNVFdVrewPITM0fMUld5JD5hn8rrxXXnlvQBSeQ4uBBBfe0
+    ssh_stream: 22222
     port53systemd: systemd-r
     jammy: 22.04
 
   tasks:
-
+### these are the ordered .yml files that will be executed consecutively
   - include_tasks: 1-create-hostname.yml
   - include_tasks: 2-create-user.yml
   - include_tasks: 3-setup-apps.yml
   - include_tasks: 4-enable-ufw.yml
   - include_tasks: 5-secure-ssh.yml
-  #- include_tasks: 6-server-reboot.yml
