--- a/playbooks/base-server/1-create-hostname.yml
+++ b/playbooks/base-server/1-create-hostname.yml
@@ -1,16 +1,19 @@
 ---
 
+### the hostname that you want the server to be
     - name: Set static hostname
       hostname:
-        name: mondskiez-test
-    
-    - name: add new hostname to host file
+        name: "{{ desired_hostname }}"
+
+### adding a hostname entry to the host file in order for the server to be able to resolve itself
+    - name: add hostname to /etc/hosts file
       lineinfile:
         dest: /etc/hosts
         state: present
-        line: "127.0.0.1 mondskiez-test"
+        line: "127.0.0.1 {{ desired_hostname }}"
         insertafter: "EOF" 
 
-    - name: Set Timezone to Asia/Manila
+### set your preferred timezone
+    - name: Set Timezone
       timezone:
-        name: Asia/Manila
+        name: "{{ tz }}"
