--- a/playbooks/base-server/5-secure-ssh.yml
+++ b/playbooks/base-server/5-secure-ssh.yml
@@ -39,7 +39,7 @@
         state: directory
         owner: "{{ user_name }}"
         group: "{{ user_name }}"
-      when: ansible_facts[distribution_version'] is version('22.04', '>')
+      when: ansible_facts['distribution_version'] is version('22.04', '>')
 
 ### after task above, an overried.conf file must be created
 ### the file incorporates the ssh_stream var to ListenStream=ssh_stream
