--- a/playbooks/base-server/5-secure-ssh.yml
+++ b/playbooks/base-server/5-secure-ssh.yml
@@ -1,18 +1,13 @@
 ---
 
-### check SSH port before changes are made via grepping and awking ss -tulpn
-    - name: "check default SSH port"
+### check SSH port before changes are made thru grepping and awking of ss -tulpn
+    - name: "checking default SSH port"
       shell: 
         cmd: "sudo ss -tulpn | grep ssh | awk 'FNR == 1 {print $5}' | awk -F: '{print $2}'"
       register: ssh_port_before
 
-### show the return value of default SSH port
-    - name: SSH default port
-      debug:
-        msg: "SSH default port is {{ ssh_port_before.stdout }}"
-
-### edit the sshd_config to configure pubkeyauth only
-    - name: modifying sshd_config for pubkeyauth only
+### edit the sshd_config to configure sshkey login
+    - name: modifying sshd_config for sshkey login only
       lineinfile: 
         path: /etc/ssh/sshd_config
         regexp: "{{ item.regexp }}"
@@ -33,7 +28,7 @@
 
 ### on Ubuntu distros above 22.04 ssh is being handled by ssh.socket
 ### in order to save changes to the sshd_config, a directory must first be created
-    - name: creating ssh.socket.d directory
+    - name: creating ssh.socket.d directory on distros above 22.04
       file:
         dest: /etc/systemd/system/ssh.socket.d/
         state: directory
@@ -41,9 +36,9 @@
         group: "{{ user_name }}"
       when: ansible_lsb.release|int >= 22.05
 
-### after task above, an overried.conf file must be created
-### the file incorporates the ssh_stream var to ListenStream=ssh_stream
-    - name: "creating override.conf to specify SSH port Ubuntu Server 22.10 and higher"
+### after task above runs, an override.conf file must be created
+### the override.conf file incorporates the variable for {{ ssh_stream }} as desired SSH port
+    - name: creating override.conf on distros above 22.04 for desired SSH port 
       copy:
         dest: /etc/systemd/system/ssh.socket.d/override.conf
         content: |
@@ -52,38 +47,46 @@
           ListenStream={{ ssh_stream }}
       when: ansible_lsb.release|int >= 22.05
 
+### the ansible_lsb.release variable is piped into integer and is compared if it is less than or equal to 22.04
+### for 22.04 means it is Ubuntu Jammy Release
     - name: Enabling SSH service on distros <= 22.04
       command: sudo systemctl enable ssh
       when: ansible_lsb.release|int <= 22.04
-    
+
+### the ansible_lsb.release variable is piped into integer and is compared if it is greater than or equal to 22.05
+### 22.05 means it is above the Ubuntu Jammy Release 
     - name: Enabling SSH service on distros > 22.04
       command: sudo systemctl enable ssh.service
       when: ansible_lsb.release|int >= 22.05
 
+### Jammy distro and below
     - name: Restarting SSH service on distros <= 22.04
       command: sudo systemctl restart ssh
       when: ansible_lsb.release|int <= 22.04
 
+### Distro is greater than Jammy
     - name: Restarting SSH service on distros > 22.04
       command: sudo systemctl restart ssh.service
       when: ansible_lsb.release|int >= 22.05
 
-    - name: UFW allow new ssh port
+    - name: UFW limit new SSH port
       ufw:
         rule: limit
         port: "{{ ssh_stream }}"
         proto: tcp
     
-    - name: Reload UFW service
+    - name: Reloading UFW service
       command: sudo ufw reload
 
-    - name: check new ports results
+    - name: Checking process user for new SSH port
       shell: 
         cmd: "sudo ss -tulpn | grep ssh | awk 'FNR == 1 {print $5}' | awk -F: '{print $2}'"
       register: ssh_port_after
 
-    - name: "SSH port before and after comparison"
+    - name: "Comparing SSH ports before and after"
       debug:
         msg: 
         - "SSH port before is {{ ssh_port_before.stdout }}"
         - "SSH port after is {{ ssh_port_after.stdout }}"
+        - "----------------------------------------------------------------------------"
+        - "Be sure to reconfigure your hosts.yml file to point to the new port at {{ ssh_port_after.stdout }}"
